--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
         </div>
         <div class="recipy-three width-thirty">
           <img src="images/recipie3.jpg" alt="food picture" />
+          <h2>Muton
+          </h2>
           <p>
             Here we present you,our special item,Maton.If you want try something new
             try this one.Also this is one of my favorite dish.
